--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770079.md#1">冯仑被退休：退休金8千 广场舞大妈都看不起</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784637.md#1">任世豪：中共法律丑闻又一桩</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783930.md#1">袁斌：没人信的藏民安全满意度与江苏脱贫率</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783651.md#1">【名家专栏】川普的全国讲话恰如其分</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783273.md#1">丹丹：关于香港“明日大屿愿景”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782100.md#1">乾元：从广州地陷看中共城市管理体制</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781689.md#1">【名家专栏】对英国工党败选的思考</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781626.md#1">石铭：中共迫害无辜老人 丧尽天良</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781128.md#1">袁斌：伊朗上演复仇戏 中共党媒失望</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
