--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -32,7 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784980.md#1">武汉肺炎病毒或来自蝙蝠 与SARS相似度近8成</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784908.md#1">“台北市章鱼哥”天玉里 蔡英文得票领先</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新中】决战2020 计票蔡英文持续领先</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新中】决战2020 蔡英文领先125万票</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782305.md#1">山东法轮功学员李长芳被害死 遗体遭抢</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784586.md#1">NHK播放蔡英文投票后受访内容 中国画面变黑</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784637.md#1">任世豪：中共法律丑闻又一桩</a><br>
