--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -10,6 +10,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777798.md#1" target="_blank">云游商旅之拾遗篇（上）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/shutterstock_432664555-150x120.jpg" align ="left"></a>某年过年，云在这个山坡间贩卖，时常有位老妇人走过，与云相谈甚欢，在云旁边，一边聊着也一边帮云向走过的游人介绍云的手做品。年节结束后，生意开始渐渐下滑，天气也开始变化，云心想，再卖个几天，今年这个地方就差不多了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782712.md#1" target="_blank">生命的涟漪，已在扩散</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782712.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1403082235382483-150x120.jpg" align ="left"></a>人心向善的变化，可能就在一念间，我们敏锐地抓住人性善良的瞬间光辉，藉由生命感动生命的过程，让它不断地扩大……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank">野火灾情惨重 澳洲青年开车四处救无尾熊</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1185446524-150x120.jpg" align ="left"></a>澳洲野火自去年9月延烧至今，已经烧掉相当于韩国那么大的林地，导致5亿只动物死亡，其中包括大量澳洲特有的可爱动物无尾熊。除了澳洲政府致力于灭火之外，当地民众也尽力救灾，其中包括弥迦（Micah）和迦勒（Caleb）这两名年轻男子。他们开车四处搜寻，试图拯救受灾的无尾熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780250.md#1" target="_blank">【无鱼坊的摄影心视界】黑发红痣枝上啼</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d43e8dd5bf17c3f213663485bb6472c1-150x120.jpg" align ="left"></a>听到枝头巧克力......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 10:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/1/19/n2791368.md#1" target="_blank">冥冥之中有定数：状元锦袍之奇梦</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/10/1/19/n2791368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/ed366e505f0e0f4f9bf6fa62f93e9a34-150x120.png" align ="left"></a>一天，他做了一个奇梦，梦中他来到一处美妙的地方，那儿的楼台亭阁辉煌壮丽，皆非人间所有。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751782.md#1" target="_blank">小香姑传奇 菩萨送来的小仙女</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/28/n11751782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/PK2A002815N000000000PAA-150x120.jpg" align ="left"></a>明朝时期，刘家妇人罗氏一天梦到五彩的祥云，在天上簇拥着一个仙女，此仙女穿着绛红的衣服，飘然降于刘家。罗氏怀孕十个月来，家中始终飘散着一股弥漫不绝的奇香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769139.md#1" target="_blank">天地清明引(163) 东流水－幕后操手4</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769139.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/06877c354d4a51fdaf9ed5d296f882eb-150x120.jpg" align ="left"></a>长江两侧，旌旗飘飘。江北，赤旗黑纹，雕镂侯门图腾；江南，蓝旗白条，锦绣云纹游凤。两岸对峙之间，大江东去，浩浩荡荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:00 AM			</td></tr>
@@ -26,7 +27,6 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765864.md#1" target="_blank">?美国四位总统的神异经历</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11765864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/Mayflower_in_Plymouth_Harbor_by_William_Halsall-150x120.jpg" align ="left"></a>美国是一个建立在上帝之下的国家，宗教信仰是美国的立国之本。1620年，102位英国清教徒为了躲避迫害来到了美国，他们期望在这块大陆上寻找到他们实现宗教理想的“净土”。早期的北美移民清教徒领袖约翰?温斯洛普（John Winthrop）在其著名布道词中首先提出了“新教孤立”的观点。他说，“我们应该是一座山巅之城，人们的眼.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777445.md#1" target="_blank">五律：繁星</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/milky-way-2078342_1920-1-150x120.jpg" align ="left"></a> 光辉照东土，岁月落繁星。 高士云中响，骚人竹上铭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11748112.md#1" target="_blank">鼠年话鼠：善鼠、报恩鼠</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11748112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/253cb35541e8067c6d4ca903edbbf279-150x120.png" align ="left"></a>鼠年话鼠，老鼠有灵。中国民间善鼠、报恩鼠的传说被古籍留下来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775667.md#1" target="_blank">1978年蒋经国发表《揭穿共党和谈阴谋》</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11775667.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Photo1-150x120.jpg" align ="left"></a>蒋经国在担任国防部长、行政院长等重要职务期间，台湾正遇上退出联合国、中美断交、石油危机等一连串内外交困的重大事件，这期间中共也不断的向全世界渗透，并准备对台湾进行和平谈判。首先是复出掌权的邓小平率先表示将“优先考虑用和平方式统一”想与中国国民党党进行交流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 12:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784447.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
 风水中不同的季节观与即将来到的年前打扫日（2A-1）
 想起一个例子，大家可以一起又见证一下，中国风水文化潜藏着的“金神”力量，这种潜力，让世界上最聪明的民族、并且仗着它的金融操控能耐、差不多是当今世界上真正金神的犹太民族，被远远抛后端！
